add mailToUserController.java, mail.html, add dependencies

--- a/back-end/TN412-Nhom-1/src/main/resources/application.properties
+++ b/back-end/TN412-Nhom-1/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
@@ -19,3 +19,11 @@ upload.bookFolder=src/main/resources/static/images/books
 upload.avatarFolder=src/main/resources/static/images/avatars
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.sql.init.platform=mysql
+
+#Send mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=phungdemachp2902@gmail.com
+spring.mail.password=qolescgtvaugqroi
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
