--- a/back-end/TN412-Nhom-1/src/main/resources/application.properties
+++ b/back-end/TN412-Nhom-1/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
